# extract-calculator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/extract_calculator/: main.py
src/extract_calculator/reader/: parser.py  reader.py
src/extract_calculator/ui/: footer.py  formatter.py  main_window.py  table.py
